media-server/booksonic-air/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksonic-air
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: booksonic-air
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: booksonic-air
    spec:
      containers:
        - name: booksonic-air
          image: lscr.io/linuxserver/booksonic-air:2201.1.0
          ports:
            - containerPort: 4040
              name: http
          volumeMounts:
            - name: config-pv
              mountPath: /config
            - name: data-pv
              subPath: Audiobooks
              mountPath: /audiobooks
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config-pv
          persistentVolumeClaim:
            claimName: booksonic-air-config
        - name: data-pv
          persistentVolumeClaim:
            claimName: media-pvc-2
