media-server/booksonic-air/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booksonic-air
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: booksonic-air
