media-server/booksonic-air/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksonic-air
  namespace: media-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: booksonic-air.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booksonic-air
            port:
              name: http
  tls:
  - hosts:
    - booksonic-air.wavecat.net
    secretName: booksonic-air.wavecat.net
